# Stampede

./: .gitignore  CMakeLists.txt  CREDITS  may_proto_orx.ini
cfg/: may_proto_orx.ini
cfg/objects/: clientHands.ini  creditsscene_objects.ini  gamescene_objects.ini  helpscene_objects.ini  papergenerator.ini  papers.ini  right_hand.ini  score_display.ini  titlescene_objects.ini
cfg/scenes/: scenes.ini
cfg/settings/: controls.ini
cmake/: Orx.cmake  android.cmake  linux.cmake  osx.cmake  windows.cmake
src/: CMakeLists.txt  ClientHand.cpp  ClientHand.h  Paper.cpp  Paper.h  PaperGenerator.cpp  PaperGenerator.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  StamperHands.cpp  StamperHands.h  SubmitterHands.cpp  SubmitterHands.h  callbacks.h  main.cpp  may_proto_orx.cpp  may_proto_orx.h
