cmake_minimum_required(VERSION 2.8)
project(may_proto_orx)

set(CMAKE_DEBUG_FOSTFIX "d")

# force IDEs to obey
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/dist)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

include(cmake/Orx.cmake)

set(Boost_USE_MULTITHREADED ON)
find_package(
	Boost
	COMPONENTS
	system
	thread
	filesystem
	date_time
)

include_directories(${Boost_INCLUDE_DIRS})

# because MSVC is stupid
include_directories(src)

add_subdirectory(src)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	set(
		CMAKE_INSTALL_PREFIX
		"${CMAKE_BINARY_DIR}/dist"
		CACHE PATH
		"Install location"
		FORCE
	)
endif()

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dist)

# install(
# 	DIRECTORY
# 	${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
# 	DESTINATION ./
# 	FILE_PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
# 	DIRECTORY_PERMISSIONS OWNER_EXECUTE OWNER_READ OWNER_WRITE
# 	CONFIGURATIONS Release RelWithDebInfo Debug
# )

install(
	DIRECTORY
	Resources
	DESTINATION ./
	CONFIGURATIONS Release RelWithDebInfo Debug
)

install(
	DIRECTORY
	cfg/
	DESTINATION ./
	CONFIGURATIONS Release RelWithDebInfo Debug
)
